Removed collapseOnSelect from Navbar. It affects NavItems href linking. Resolved CSS issue imported from react-select Jed Watson example. Still need work on it though.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,14 +1,14 @@
-.App {
+/*.App {
   height: 100vh;
   width: 100vw;
 
   padding-top: 55px;
-}
+}*/
 
-.App-header {
-  /*height: 150px;*/
+/*.App-header {
+  height: 150px;
   position: fixed;
   top: 0;
   width: 100%;
   border-radius: 5px;
-}
+}*/
