--- a/src/components/UserTripSelection/UserTripSelection.css
+++ b/src/components/UserTripSelection/UserTripSelection.css
@@ -388,12 +388,14 @@ a {
 a:hover {
   text-decoration: underline;
 }
-.container {
+/*.container {
   margin-left: auto;
   margin-right: auto;
   max-width: 400px;
   padding: 0 30px;
-}
+}*/
+
+
 h1,
 h2,
 h3,
